[package]
name = "circuitdojo_tester"
version = "0.1.3"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
description = "Board Support crate for the Circuitdojo Feather Tester"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6.4"
embedded-hal = "0.2.4"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.12"

[dependencies.atsamd-hal]
default-features = false
git = "https://github.com/jaredwolff/atsamd/"
branch = "jared-circuitdojo-tester-dev"

[dependencies.panic-abort]
version = "0.3"
optional = true

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.panic-semihosting]
version = "0.5"
optional = true

[dependencies.panic_rtt]
version = "0.1"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
cortex-m-semihosting = "0.3"

[features]
default = ["rt", "atsamd-hal/samd21j", "panic_halt", "unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd21j-rt"]
unproven = ["atsamd-hal/unproven"]
use_rtt = ["atsamd-hal/use_rtt", "panic_rtt"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
panic_halt = ["panic-halt"]
panic_abort = ["panic-abort"]
panic_semihosting = ["panic-semihosting"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[[example]]
name = "usb_echo"
required-features = ["usb"]

[[example]]
name = "blinky_basic"
